# timeline

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: package-windows.yml
apps/browser-extension/: README.md  content-script.js  manifest.json  service-worker.js
apps/desktop-agent/: Cargo.toml
apps/desktop-agent/src/: config.rs  db.rs  http.rs  main.rs  state.rs  trackers.rs  windows.rs
apps/timeline-agent/: Cargo.toml
apps/timeline-agent/src/: config.rs  db.rs  http.rs  main.rs  state.rs  system.rs  trackers.rs  windows.rs
apps/web-ui/: README.md  package-lock.json  package.json  vite.config.ts
apps/web-ui/src/: App.css  App.tsx  api.ts  index.css  main.tsx
apps/web-ui/src/components/: chart-tooltip.tsx  donut-chart.tsx  timeline-chart.tsx  timeline-clock.tsx
apps/web-ui/src/lib/: chart-model.ts
config/: desktop-agent.example.toml  timeline-agent.example.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
docs/: api.md  architecture.md  repo-deconstruction.md  schema.md
packaging/windows/: Timeline.iss
scripts/: build-installer.ps1  build-portable.ps1
